config/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    app.kubernetes.io/component: controller
