config/webhook/manifests.v1beta1.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: webhook
webhooks:
  - clientConfig:
      caBundle: Cg==
      service:
        name: webhook-service
        namespace: system
        path: /mutate-v1-pod
    failurePolicy: Fail
    name: mpod.elbv2.k8s.aws
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: webhook-service
        namespace: system
        path: /mutate-elbv2-k8s-aws-v1beta1-targetgroupbinding
    failurePolicy: Fail
    name: mtargetgroupbinding.elbv2.k8s.aws
    rules:
      - apiGroups:
          - elbv2.k8s.aws
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - targetgroupbindings
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: webhook
webhooks:
  - clientConfig:
      caBundle: Cg==
      service:
        name: webhook-service
        namespace: system
        path: /validate-v1-pod
    failurePolicy: Ignore
    name: vpod.elbv2.k8s.aws
    rules:
      - apiGroups:
        - ""
        apiVersions:
          - v1
        operations:
          - DELETE
        resources:
          - pods
    sideEffects: NoneOnDryRun
  - clientConfig:
      caBundle: Cg==
      service:
        name: webhook-service
        namespace: system
        path: /validate-elbv2-k8s-aws-v1beta1-targetgroupbinding
    failurePolicy: Fail
    name: vtargetgroupbinding.elbv2.k8s.aws
    rules:
      - apiGroups:
          - elbv2.k8s.aws
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - targetgroupbindings
    sideEffects: None
